# Calliope-Radio-Scanner

./: CRS.hex  LICENSE  README.md
.github/workflows/: rust-macos.yml  rust.yml
Backend/: crs-server.py
Calliope Antenna/: crs-antenna.hex
Frontend/: api_spec.html  control.html  index.html  script.js  style.css
Rust Middleware/: Cargo.toml
Rust Middleware/src/: main.rs
