[package]
name = "crs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
minreq = { version = "2.8.1", features = ["https"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serialport = "4.2.1"
