[package]
name = "crs"
version = "1.0.0"
authors = ["Pascal Dietrich <pascal.1.dietrich@hotmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/Cameo007/Calliope-Radio-Scanner/"
license = "GPL-3.0"
keywords = ["calliope-mini", "radio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
minreq = { version = "2.8.1", features = ["https"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serialport = "4.2.1"
